# cfltk

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  cfltk2.pc.in  cmake_options.txt  flex.patch  fltk.patch
.github/workflows/: build.yml
cmake/: cfltk-pkgconfig.cmake  cfltk2-pkgconfig.cmake  cfltk2Config.cmake.in  cfltkConfig.cmake.in
examples/: CMakeLists.txt  README.md  android.c  counter.c  cthreads.cpp  deleter.c  handler.c  handler2.c  hello.c  img.c  test1.c  threads.cpp
include/: cfl.h  cfl_box.h  cfl_browser.h  cfl_button.h  cfl_dialog.h  cfl_draw.h  cfl_enums.h  cfl_group.h  cfl_image.h  cfl_input.h  cfl_lock.h  cfl_macros.h  cfl_menu.h  cfl_misc.h  cfl_output.h  cfl_prefs.h  cfl_printer.h  cfl_surface.h  cfl_table.h  cfl_term.h  cfl_text.h  cfl_tree.h  cfl_utils.h  cfl_valuator.h  cfl_widget.h  cfl_widget.hpp  cfl_window.h
include/cfltk/: cfl.h  cfl_box.h  cfl_browser.h  cfl_button.h  cfl_dialog.h  cfl_group.h  cfl_input.h  cfl_macros.h  cfl_menu.h  cfl_misc.h  cfl_printer.h  cfl_table.h  cfl_term.h  cfl_text.h  cfl_tree.h  cfl_valuator.h  cfl_widget.h  cfl_widget.hpp  cfl_window.h
include/cfltk2/: cfl.h  cfl_browser.h  cfl_button.h  cfl_draw.h  cfl_input.h  cfl_lock.h  cfl_macros.h  cfl_misc.h  cfl_text.h  cfl_tree.h  cfl_utils.h  cfl_widget.h  cfl_widget.hpp
scripts/: bootsrap_macos.sh  bootsrap_windows.sh  bootstrap_common.sh  bootstrap_linux.sh  bootstrap_linux_with_gl.sh  bootstrap_macos.sh  bootstrap_msvc.bat  bootstrap_posix.sh  bootstrap_windows.sh
src/: Fl_Flow.H  Fl_Simple_Terminal.H  Fl_Simple_Terminal.cxx  cfl.cpp  cfl_box.cpp  cfl_browser.cpp  cfl_button.cpp  cfl_dialog.cpp  cfl_draw.cpp  cfl_font.cpp  cfl_global.hpp  cfl_group.cpp  cfl_image.cpp  cfl_input.cpp  cfl_lock.cpp  cfl_lock.hpp  cfl_menu.cpp  cfl_misc.cpp  cfl_new.cpp  cfl_nswindow.m  cfl_output.cpp  cfl_platform.cpp  cfl_prefs.cpp  cfl_printer.cpp  cfl_surface.cpp  cfl_table.cpp  cfl_term.cpp  cfl_text.cpp  cfl_tree.cpp  cfl_utils.cpp  cfl_valuator.cpp  cfl_vec.hpp  cfl_widget.cpp  cfl_widget.hpp  cfl_window.cpp  glad.c
tests/: test1.c
